# videograce

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  VideoGrace.sln  build.sh
Client/: CMakeLists.txt  Client.cpp  Client.manifest  Client.vcxproj  Client.vcxproj.filters  UI.rc  cmake_install.cmake  resource.h
Client/AudioRenderer/: AudioRenderer.cpp  AudioRenderer.h  IAudioRenderer.h
Client/Camera/: Camera.cpp  Camera.h  ICamera.h  ScreenCapturer.cpp  ScreenCapturer.h
Client/CaptureSession/: CaptureAudioSession.cpp  CaptureAudioSession.h  CaptureVideoSession.cpp  CaptureVideoSession.h  ICaptureAudioSession.h  ICaptureVideoSession.h
Client/Device/: Device.cpp  Device.h
Client/Microphone/: IMicrophone.h  Microphone.cpp  Microphone.h
Client/Registrator/: Registrator.cpp  Registrator.h
Client/RendererSession/: IActionReceiver.h  IRendererAudioSession.h  IRendererVideoSession.h  RendererAudioSession.cpp  RendererAudioSession.h  RendererVideoSession.cpp  RendererVideoSession.h
Client/UI/: AboutDialog.cpp  AboutDialog.h  ActivateHandler.cpp  ActivateHandler.h  BusyBox.cpp  BusyBox.h  CPUMeter.cpp  CPUMeter.h  CallParams.h  ConferenceDialog.cpp  ConferenceDialog.h  ContactDialog.cpp  ContactDialog.h  ContactList.cpp  ContactList.h  ContentPanel.cpp  ContentPanel.h  CredentialsDialog.cpp  CredentialsDialog.h  DemonstrationWindow.cpp  DemonstrationWindow.h  DeviceNotifies.h  DialingDialog.cpp  DialingDialog.h  EnterPasswordDialog.cpp  EnterPasswordDialog.h  IControlActions.h  ListPanel.cpp  ListPanel.h  MainFrame.cpp  MainFrame.h  MainToolBar.cpp  MainToolBar.h  MemberList.cpp  MemberList.h  MiniWindow.cpp  MiniWindow.h  QuestionDialog.cpp  QuestionDialog.h  RegistrationDialog.cpp  (+13 more)
Client/VideoRenderer/: IVideoRenderer.h  VideoRenderer.cpp  VideoRenderer.h
Client/res/: dark.json  en_locale.json  kk_locale.json  light.json  ru_locale.json
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  Version.h
Engine/AEC/: AEC.cpp  AEC.h  IAEC.h
Engine/API/: CreateGroup.cpp  CreateGroup.h  CreateUser.cpp  CreateUser.h  DeleteGroup.cpp  DeleteGroup.h  DeleteUser.cpp  DeleteUser.h  EditGroup.cpp  EditGroup.h  EditUser.cpp  EditUser.h  RedirectUser.cpp  RedirectUser.h  RegisterUser.cpp  RegisterUser.h  Result.cpp  Result.h  ServerInfo.cpp  ServerInfo.h
Engine/Audio/: AudioDecoder.cpp  AudioDecoder.h  AudioEncoder.cpp  AudioEncoder.h  AudioMixer.cpp  AudioMixer.h  CodecType.h  IAudioDecoder.h  IAudioEncoder.h  OpusDecoderImpl.cpp  OpusDecoderImpl.h  OpusEncoderImpl.cpp  OpusEncoderImpl.h  Resampler.cpp  Resampler.h  SilentDetector.cpp  SilentDetector.h  SoundBlock.h
Engine/Common/: Base64.cpp  Base64.h  BitHelpers.h  CRC32.cpp  CRC32.h  Common.h  FSHelpers.cpp  FSHelpers.h  HTMLSymbolsScreener.cpp  HTMLSymbolsScreener.h  HumanTime.cpp  HumanTime.h  JSONSymbolsScreener.cpp  JSONSymbolsScreener.h  Logger.cpp  Logger.h  MACAddresses.cpp  MACAddresses.h  Process.cpp  Process.h  Quoter.h  RuntimeMeter.cpp  RuntimeMeter.h  ShortSleep.cpp  ShortSleep.h  StatMeter.cpp  StatMeter.h  TimeMeter.h  ToDigit.cpp  ToDigit.h  Types.h  URLDecode.cpp  URLDecode.h  URLEncode.cpp  URLEncode.h  WindowsVersion.h  md5.cpp  md5.h
Engine/Controller/: Controller.cpp  Controller.h  IController.h  IMemberList.h
Engine/Crypto/: Checker.cpp  Checker.h  Decryptor.cpp  Decryptor.h  Encryptor.cpp  Encryptor.h  IDecryptor.h  IEncryptor.h
Engine/DB/: Connection.cpp  Connection.h  Query.cpp  Query.h  Result.h  (+2 more)
(+460 files in other folders)
